
sbin_SCRIPTS= \
	glite-dgas-ceServerd-had.pl\
	dgas-pushd-SQLite.pl \
	dgas-pushd-fileInput.pl \
	dgas-urcollector-SQLite.pl	

libexec_SCRIPTS= \
        glite-dgas-voFromPoolAccountPatterns.pl

AM_CPPFLAGS = \
        -I$(top_srcdir)/interface \
        -I$(top_srcdir)/src \
        $(GLITE_CFLAGS) \
        $(GLOBUS_THR_CFLAGS) \
        -DGSI  

