
testsdir=$(libexecdir)/dgastests/tests

 
tests_SCRIPTS=\
	addResourceAuth.sh \
	benchmarksTest.sh \
	delResourceAuth.sh \
	atmClient.sh \
	cleanUpJob.sh \
	generateJobId.sh \
	hlrDBExists.sh \
	hlrHADIsAlive.sh \
	hlrQmgrIsAlive.sh \
	hlrServerdIsAlive.sh \
	hlr_tmpDBExists.sh \
	mysqldPing.sh \
	mysqldStatus.sh \
	waitForJob.sh \
	voproblemjob.sh \
	cleanResubJob.sh \
	testResubmission.sh \
	missingStartQtimeJob.sh \
	wrongcputjob.sh \
	testMinus_o.sh \
	testMinus_a.sh \
	negativeWCTJob.sh \
	voOriginTest.sh \
	test.pbs.UR \
	test.pbs.UR.SQL \
	test.lsf.UR \
	glideInTest.sh \
	gridJobFQAN.sed \
	gridJobFQAN.lsf.sed \
	dgas_sensors_test.conf \
	dgas_sensors_test.conf.lsf.ldif.sed \
	dgas_sensors_test.conf.lsf.sed \
	dgas_sensors_test.conf.template \
	dgas_sensors_test_poolPatterns.conf \
	putURindgasURBox.sh \
	putURindgasURBox.SQL.sh \
	putLSFURindgasURBox.sh \
	createLSFRecords.sh \
	grid-jobmap.template \
	grid-jobmap.template.lsf \
	gridJobpool.sed \
	gridJobGlideIn.sed \
	localJobmap.sed \
	static-test.ldif \
	testJobMap.conf \
	UR_LRMS_lsf.records \
	UR_LRMS_pbs.records \
	glite-info-dynamic-ce.ldif.4482 \
	multiplePing.sh \
	multipleRecords.sh \
	checkTable.sh \
	poolAccountPattern.conf.template
	

MAINTAINERCLEANFILES = Makefile.in 

